--- a/package.json
+++ b/package.json
@@ -1,21 +1,10 @@
 {
-  "name": "call-logs-viewer",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.0",
     "chart.js": "^4.4.1",
-    "clsx": "^2.0.0",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind-merge": "^2.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@types/node": "^20",
